# repo-issue

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
issue_tracker/: __init__.py  cli.py  create_issue.py  discovery.py  init.py  update_status.py  yaml_utils.py
issue_tracker/templates/: bug_report.md  feature_request.md  ui_regression.md
skills/local-issue-tracker/: SKILL.md
tests/: test_cli.py  test_cli_color.py  test_create_issue.py  test_discovery.py  test_id_collision_skip.py  test_init.py  test_issue_list.py  test_update_status.py  test_yaml_utils.py
