[project]
name = "repo-issue"
version = "0.1.0"
description = "Repo-local issue ticket tracker: markdown files with YAML frontmatter, zero runtime dependencies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
issue = "issue_tracker.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["issue_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
